# perpetuals

./: Anchor.toml  package-lock.json  package.json
app/: package-lock.json  package.json
programs/perpetuals/: Cargo.toml
programs/perpetuals/src/: lib.rs
programs/perpetuals/src/instructions/: add_collateral.rs  add_custody.rs  add_liquidity.rs  get_add_liquidity_amount_and_fee.rs  get_entry_price_and_fee.rs  get_remove_liquidity_amount_and_fee.rs  get_swap_amount_and_fees.rs  init.rs  open_position.rs  remove_collateral.rs  remove_liquidity.rs  set_custom_oracle_price_permissionless.rs  swap.rs  upgrade_custody.rs  withdraw_sol_fees.rs
programs/perpetuals/src/state/: multisig.rs  oracle.rs  perpetuals.rs  pool.rs
programs/perpetuals/tests/native/instructions/: get_update_pool_ix.rs  test_add_custody.rs  test_add_pool.rs  test_get_lp_token_price.rs  test_update_pool_aum.rs
programs/perpetuals/tests/native/tests_suite/liquidity/: fixed_fees.rs
programs/perpetuals/tests/native/utils/: pda.rs  test_setup.rs  utils.rs
