[package]
name = "perpetuals"
version = "0.1.0"
description = "Solana Perpetuals Exchange"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/perpetuals"
categories = ["finance"]
keywords = ["solana", "dex", "perpetuals", "futures", "exchange"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetuals"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version="0.31.1", features = ["init-if-needed", "event-cpi"]}
anchor-spl = "0.31.1"
# solana-program = "*"
solana-security-txt = "1.1.1"
pyth-min = "0.1.1"
ahash = "0.8.1"
num-traits = "0.2.19"
num = "0.4.3"
bytemuck = { version = "1.4.0" }
proc-macro2 = { version = "1.0.95", features = ["nightly", "span-locations"] }

[dev-dependencies]
solana-program-test = "2.2.2"
solana-sdk = "2.1.15"
tokio = { version = "1.44.1", features = ["macros"] }

bincode = "1.3.3"
maplit = "1.0.2"
